Fotos de Gruas Agregadas

--- a/public/index.html
+++ b/public/index.html
@@ -252,6 +252,27 @@
        <div class="col-md-3 col-sm-6 col-xs-12">
            <img class="img-responsive img-thumbnail" src="img/foto6.jpg">
        </div>
+       <div class="col-md-3 col-sm-6 col-xs-12">
+           <img class="img-responsive img-thumbnail" src="img/foto7.jpg">
+       </div>
+       <div class="col-md-3 col-sm-6 col-xs-12">
+           <img class="img-responsive img-thumbnail" src="img/foto8.jpg">
+       </div>
+       <div class="col-md-3 col-sm-6 col-xs-12">
+           <img class="img-responsive img-thumbnail" src="img/foto9.jpg">
+       </div>
+       <div class="col-md-3 col-sm-6 col-xs-12">
+           <img class="img-responsive img-thumbnail" src="img/foto10.jpg">
+       </div>
+       <div class="col-md-3 col-sm-6 col-xs-12">
+           <img class="img-responsive img-thumbnail" src="img/foto11.jpg">
+       </div>
+       <div class="col-md-3 col-sm-6 col-xs-12">
+           <img class="img-responsive img-thumbnail" src="img/foto12.jpg">
+       </div>
+       <div class="col-md-3 col-sm-6 col-xs-12">
+           <img class="img-responsive img-thumbnail" src="img/foto13.jpg">
+       </div>
     </div>
 </div> <!-- /container -->
 
