Cambio el precio de servicio local a 200

--- a/public/index.html
+++ b/public/index.html
@@ -156,11 +156,11 @@
                         <h2 class="text-center">Servicio Local <strong>Desde</strong></h2>
                         <!-- Drop-off date/time start -->
                         <div class="datetime drop-off text-center">
-                              <h1 style="background-color: #efe9e9; padding-top:8px; padding-bottom:8px;"><b>Q 250</b></h1>
+                              <h1 style="background-color: #efe9e9; padding-top:8px; padding-bottom:8px;"><b>Q 200</b></h1>
                               <p><strong>* Aplican restricciones</strong></p>
                             <div class="clearfix"></div>
                         </div>
-                        <h3 class="text-center bg-info" id="info-llamanos">Puedes llamar más fácil pulsando sobre el botón de abajo, será un gusto atenderle.</h3>
+                        <h3 class="text-center bg-info" id="info-llamanos">Contacto directo garantizado, sin intermediarios, los mejores precios.</h3>
 
                         <!-- Drop-off date/time end -->
                         <div class="text-center">
